.NET version change to 6.0

--- a/Convesys.Providers.Storage.AzureCosmosDatabase/Convesys.Providers.Databases.AzureCosmosDatabase.csproj
+++ b/Convesys.Providers.Storage.AzureCosmosDatabase/Convesys.Providers.Databases.AzureCosmosDatabase.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>NET60</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Description>Provides an API for Azure Cosmos Database.</Description>
     <Version>1.0.2</Version>
