--- a/Convesys.Providers.MemoryCache.L0.Tests/Convesys.Providers.MemoryCache.L0.Tests.csproj
+++ b/Convesys.Providers.MemoryCache.L0.Tests/Convesys.Providers.MemoryCache.L0.Tests.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <TargetFramework>NET6.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
@@ -18,10 +18,6 @@
     <PackageReference Include="NUnit" Version="3.10.1" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.10.0" />
     <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Pirina.Providers.MemoryCache\Pirina.Providers.MemoryCache.csproj" />
   </ItemGroup>
 
 </Project>
