--- a/Convesys.Providers.Storage.AzureBlob.Tests.L0/Convesys.Providers.Storage.AzureBlob.Tests.L0.csproj
+++ b/Convesys.Providers.Storage.AzureBlob.Tests.L0/Convesys.Providers.Storage.AzureBlob.Tests.L0.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
@@ -18,10 +18,6 @@
     <PackageReference Include="Moq" Version="4.9.0" />
     <PackageReference Include="NUnit" Version="3.10.1" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.10.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Pirina.Providers.Storage.AzureBlob\Pirina.Providers.Storage.AzureBlob.csproj" />
   </ItemGroup>
 
 </Project>
