--- a/Convesys.Providers.RainbowTables/Convesys.Providers.RainbowTables.csproj
+++ b/Convesys.Providers.RainbowTables/Convesys.Providers.RainbowTables.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Threading.Tasks" Version="4.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="Convesys.Kernel.Cryptography">
       <HintPath>D:\Dan\Software\Convesys\Convesys\Convesys.Platform.Kernel\Convesys.Kernel.Cryptography\bin\Debug\net6.0\Convesys.Kernel.Cryptography.dll</HintPath>
     </Reference>
