--- a/Convesys.Providers.MemoryCache/Twilight.Providers.MemoryCache.csproj
+++ b/Convesys.Providers.MemoryCache/Twilight.Providers.MemoryCache.csproj
@@ -15,9 +15,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Convesys.Kernel" Version="1.0.0" />
-    <PackageReference Include="Convesys.Kernel.Caching" Version="1.0.0" />
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="3.1.6" />
+    <PackageReference Include="Twilight.Platform.Kernel.Caching" Version="1.0.0" />
+    <PackageReference Include="Twilight.Platform.Kernel.Kernel" Version="1.0.0" />
   </ItemGroup>
 
 </Project>
