--- a/Convesys.Providers.Logging.Console/Twilight.Providers.Logging.Console.csproj
+++ b/Convesys.Providers.Logging.Console/Twilight.Providers.Logging.Console.csproj
@@ -7,13 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.2.0-preview1-35029" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="Convesys.Kernel">
-      <HintPath>..\..\Convesys.Platform.Kernel\Convesys.Kernel\obj\Debug\net6.0\Convesys.Kernel.dll</HintPath>
-    </Reference>
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
+    <PackageReference Include="Twilight.Platform.Kernel.Configuration" Version="1.0.0" />
+    <PackageReference Include="Twilight.Platform.Kernel.Kernel" Version="1.0.0" />
   </ItemGroup>
 
 </Project>
