--- a/Convesys.Providers.Logging.Debug/Convesys.Providers.Logging.Debug.csproj
+++ b/Convesys.Providers.Logging.Debug/Convesys.Providers.Logging.Debug.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="2.2.0-preview1-35029" />
+    <PackageReference Include="Twilight.Platform.Kernel.Kernel" Version="1.0.0" />
   </ItemGroup>
 
 </Project>
