--- a/Convesys.Providers.EntityFramework.Tests.L0/Convesys.Providers.EntityFramework.Tests.L1.csproj
+++ b/Convesys.Providers.EntityFramework.Tests.L0/Convesys.Providers.EntityFramework.Tests.L1.csproj
@@ -25,7 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Convesys.Providers.EntityFramework\Convesys.Providers.EntityFramework.csproj" />
+    <ProjectReference Include="..\Convesys.Providers.EntityFramework\Twilight.Providers.EntityFramework.csproj" />
   </ItemGroup>
 
 </Project>
