--- a/Convesys.Providers.Microsoft.Dependency.Tests.L0/Twilight.Providers.Microsoft.Dependency.Tests.L0.csproj
+++ b/Convesys.Providers.Microsoft.Dependency.Tests.L0/Twilight.Providers.Microsoft.Dependency.Tests.L0.csproj
@@ -25,7 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Convesys.Providers.Microsoft.DependencyInjection\Convesys.Providers.Microsoft.DependencyInjection.csproj" />
+    <ProjectReference Include="..\Convesys.Providers.Microsoft.DependencyInjection\Twilight.Providers.Microsoft.DependencyInjection.csproj" />
   </ItemGroup>
 
   <ItemGroup>
