--- a/Convesys.Providers.Storage.FileShare.Test.L1/Twilight.Providers.Storage.FileShare.Test.L1.csproj
+++ b/Convesys.Providers.Storage.FileShare.Test.L1/Twilight.Providers.Storage.FileShare.Test.L1.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Convesys.Providers.Storage.FileShare\Convesys.Providers.Storage.FileShare.csproj" />
+    <ProjectReference Include="..\Convesys.Providers.Storage.FileShare\Twilight.Providers.Storage.FileShare.csproj" />
   </ItemGroup>
 
 </Project>
